--- a/urlRewrite.config
+++ b/urlRewrite.config
@@ -2,6 +2,15 @@
     <system.webServer>    
         <rewrite>
             <rules>
+                <!--  Redirect all to WWW with https (tested)  -->
+                <rule name="Force WWW and SSL" enabled="true" stopProcessing="true">
+                  <match url="(.*)" />
+                  <conditions logicalGrouping="MatchAny">
+                      <add input="{HTTP_HOST}" pattern="^[^www]" />
+                      <add input="{HTTPS}" pattern="off" />
+                  </conditions>
+                  <action type="Redirect" url="https://www.mysite.com/{R:1}" appendQueryString="true" redirectType="Permanent" />
+                </rule>
                 <!-- Redirect all https to http  (Tested)-->
                 <rule name="Redirect to http" stopProcessing="true">
                     <match url="(.*)" />
